# core-net

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  approaches.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/config/: mod.rs
src/discovery/: mod.rs
src/input/: events.rs  linux.rs  macos.rs  mod.rs  traits.rs  windows.rs
src/network/: client.rs  connection.rs  mod.rs  server.rs
src/protocol/: codec.rs  message.rs  mod.rs
src/screen/: edge_detector.rs  layout.rs  mod.rs
